--- a/5. Sequence Models/Building a Recurrent Neural Network - Step by Step v3.ipynb
+++ b/5. Sequence Models/Building a Recurrent Neural Network - Step by Step v3.ipynb
@@ -58,14 +58,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/RNN.png\" style=\"width:500;height:300px;\">\n",
-    "<caption><center> **Figure 1**: Basic RNN model </center></caption>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Here's how you can implement an RNN: \n",
     "\n",
     "**Steps**:\n",
@@ -77,9 +69,6 @@
     "## 1.1 - RNN cell\n",
     "\n",
     "A Recurrent neural network can be seen as the repetition of a single cell. You are first going to implement the computations for a single time-step. The following figure describes the operations for a single time-step of an RNN cell. \n",
-    "\n",
-    "<img src=\"images/rnn_step_forward.png\" style=\"width:700px;height:300px;\">\n",
-    "<caption><center> **Figure 2**: Basic RNN cell. Takes as input $x^{\\langle t \\rangle}$ (current input) and $a^{\\langle t - 1\\rangle}$ (previous hidden state containing information from the past), and outputs $a^{\\langle t \\rangle}$ which is given to the next RNN cell and also used to predict $y^{\\langle t \\rangle}$ </center></caption>\n",
     "\n",
     "**Exercise**: Implement the RNN-cell described in Figure (2).\n",
     "\n",
@@ -229,12 +218,6 @@
     "## 1.2 - RNN forward pass \n",
     "\n",
     "You can see an RNN as the repetition of the cell you've just built. If your input sequence of data is carried over 10 time steps, then you will copy the RNN cell 10 times. Each cell takes as input the hidden state from the previous cell ($a^{\\langle t-1 \\rangle}$) and the current time-step's input data ($x^{\\langle t \\rangle}$). It outputs a hidden state ($a^{\\langle t \\rangle}$) and a prediction ($y^{\\langle t \\rangle}$) for this time-step.\n",
-    "\n",
-    "\n",
-    "<img src=\"images/rnn.png\" style=\"width:800px;height:300px;\">\n",
-    "<caption><center> **Figure 3**: Basic RNN. The input sequence $x = (x^{\\langle 1 \\rangle}, x^{\\langle 2 \\rangle}, ..., x^{\\langle T_x \\rangle})$  is carried over $T_x$ time steps. The network outputs $y = (y^{\\langle 1 \\rangle}, y^{\\langle 2 \\rangle}, ..., y^{\\langle T_x \\rangle})$. </center></caption>\n",
-    "\n",
-    "\n",
     "\n",
     "**Exercise**: Code the forward propagation of the RNN described in Figure (3).\n",
     "\n",
@@ -427,9 +410,6 @@
     "## 2 - Long Short-Term Memory (LSTM) network\n",
     "\n",
     "This following figure shows the operations of an LSTM-cell.\n",
-    "\n",
-    "<img src=\"images/LSTM.png\" style=\"width:500;height:400px;\">\n",
-    "<caption><center> **Figure 4**: LSTM-cell. This tracks and updates a \"cell state\" or memory variable $c^{\\langle t \\rangle}$ at every time-step, which can be different from $a^{\\langle t \\rangle}$. </center></caption>\n",
     "\n",
     "Similar to the RNN example above, you will start by implementing the LSTM cell for a single time-step. Then you can iteratively call it from inside a for-loop to have it process an input with $T_x$ time-steps. \n",
     "\n",
@@ -710,9 +690,6 @@
     "\n",
     "Now that you have implemented one step of an LSTM, you can now iterate this over this using a for-loop to process a sequence of $T_x$ inputs. \n",
     "\n",
-    "<img src=\"images/LSTM_rnn.png\" style=\"width:500;height:300px;\">\n",
-    "<caption><center> **Figure 4**: LSTM over multiple time-steps. </center></caption>\n",
-    "\n",
     "**Exercise:** Implement `lstm_forward()` to run an LSTM over $T_x$ time-steps. \n",
     "\n",
     "**Note**: $c^{\\langle 0 \\rangle}$ is initialized with zeros."
@@ -935,10 +912,7 @@
    "source": [
     "### 3.1 - Basic RNN  backward pass\n",
     "\n",
-    "We will start by computing the backward pass for the basic RNN-cell.\n",
-    "\n",
-    "<img src=\"images/rnn_cell_backprop.png\" style=\"width:500;height:300px;\"> <br>\n",
-    "<caption><center> **Figure 5**: RNN-cell's backward pass. Just like in a fully-connected neural network, the derivative of the cost function $J$ backpropagates through the RNN by following the chain-rule from calculas. The chain-rule is also used to calculate $(\\frac{\\partial J}{\\partial W_{ax}},\\frac{\\partial J}{\\partial W_{aa}},\\frac{\\partial J}{\\partial b})$ to update the parameters $(W_{ax}, W_{aa}, b_a)$. </center></caption>"
+    "We will start by computing the backward pass for the basic RNN-cell.\n"
    ]
   },
   {
@@ -2046,7 +2020,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
