--- a/5. Sequence Models/Dinosaurus Island - Character level language model final v3.ipynb
+++ b/5. Sequence Models/Dinosaurus Island - Character level language model final v3.ipynb
@@ -8,14 +8,6 @@
     "\n",
     "Welcome to Dinosaurus Island! 65 million years ago, dinosaurs existed, and in this assignment they are back. You are in charge of a special task. Leading biology researchers are creating new breeds of dinosaurs and bringing them to life on earth, and your job is to give names to these dinosaurs. If a dinosaur does not like its name, it might go beserk, so choose wisely! \n",
     "\n",
-    "<table>\n",
-    "<td>\n",
-    "<img src=\"images/dino.jpg\" style=\"width:250;height:300px;\">\n",
-    "\n",
-    "</td>\n",
-    "\n",
-    "</table>\n",
-    "\n",
     "Luckily you have learned some deep learning and you will use it to save the day. Your assistant has collected a list of all the dinosaur names they could find, and compiled them into this [dataset](dinos.txt). (Feel free to take a look by clicking the previous link.) To create new dinosaur names, you will build a character level language model to generate new names. Your algorithm will learn the different name patterns, and randomly generate new names. Hopefully this algorithm will keep you and your team safe from the dinosaurs' wrath! \n",
     "\n",
     "By completing this assignment you will learn:\n",
@@ -117,9 +109,6 @@
     "    - Using the gradients, update your parameter with the gradient descent update rule.\n",
     "- Return the learned parameters \n",
     "    \n",
-    "<img src=\"images/rnn.png\" style=\"width:450;height:300px;\">\n",
-    "<caption><center> **Figure 1**: Recurrent Neural Network, similar to what you had built in the previous notebook \"Building a RNN - Step by Step\".  </center></caption>\n",
-    "\n",
     "At each time-step, the RNN tries to predict what is the next character given the previous characters. The dataset $X = (x^{\\langle 1 \\rangle}, x^{\\langle 2 \\rangle}, ..., x^{\\langle T_x \\rangle})$ is a list of characters in the training set, while $Y = (y^{\\langle 1 \\rangle}, y^{\\langle 2 \\rangle}, ..., y^{\\langle T_x \\rangle})$ is such that at every time-step $t$, we have $y^{\\langle t \\rangle} = x^{\\langle t+1 \\rangle}$. "
    ]
   },
@@ -145,9 +134,6 @@
     "In this section you will implement the `clip` function that you will call inside of your optimization loop. Recall that your overall loop structure usually consists of a forward pass, a cost computation, a backward pass, and a parameter update. Before updating the parameters, you will perform gradient clipping when needed to make sure that your gradients are not \"exploding,\" meaning taking on overly large values. \n",
     "\n",
     "In the exercise below, you will implement a function `clip` that takes in a dictionary of gradients and returns a clipped version of gradients if needed. There are different ways to clip gradients; we will use a simple element-wise clipping procedure, in which every element of the gradient vector is clipped to lie between some range [-N, N]. More generally, you will provide a `maxValue` (say 10). In this example, if any component of the gradient vector is greater than 10, it would be set to 10; and if any component of the gradient vector is less than -10, it would be set to -10. If it is between -10 and 10, it is left alone. \n",
-    "\n",
-    "<img src=\"images/clip.png\" style=\"width:400;height:150px;\">\n",
-    "<caption><center> **Figure 2**: Visualization of gradient descent with and without gradient clipping, in a case where the network is running into slight \"exploding gradient\" problems. </center></caption>\n",
     "\n",
     "**Exercise**: Implement the function below to return the clipped gradients of your dictionary `gradients`. Your function takes in a maximum threshold and returns the clipped versions of your gradients. You can check out this [hint](https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.clip.html) for examples of how to clip in numpy. You will need to use the argument `out = ...`."
    ]
@@ -280,9 +266,6 @@
     "### 2.2 - Sampling\n",
     "\n",
     "Now assume that your model is trained. You would like to generate new text (characters). The process of generation is explained in the picture below:\n",
-    "\n",
-    "<img src=\"images/dinos3.png\" style=\"width:500;height:300px;\">\n",
-    "<caption><center> **Figure 3**: In this picture, we assume the model is already trained. We pass in $x^{\\langle 1\\rangle} = \\vec{0}$ at the first time step, and have the network then sample one character at a time. </center></caption>\n",
     "\n",
     "**Exercise**: Implement the `sample` function below to sample characters. You need to carry out 4 steps:\n",
     "\n",
@@ -999,9 +982,7 @@
     "\n",
     "If your model generates some non-cool names, don't blame the model entirely--not all actual dinosaur names sound cool. (For example, `dromaeosauroides` is an actual dinosaur name and is in the training set.) But this model should give you a set of candidates from which you can pick the coolest! \n",
     "\n",
-    "This assignment had used a relatively small dataset, so that you could train an RNN quickly on a CPU. Training a model of the english language requires a much bigger dataset, and usually needs much more computation, and could run for many hours on GPUs. We ran our dinosaur name for quite some time, and so far our favoriate name is the great, undefeatable, and fierce: Mangosaurus!\n",
-    "\n",
-    "<img src=\"images/mangosaurus.jpeg\" style=\"width:250;height:300px;\">"
+    "This assignment had used a relatively small dataset, so that you could train an RNN quickly on a CPU. Training a model of the english language requires a much bigger dataset, and usually needs much more computation, and could run for many hours on GPUs. We ran our dinosaur name for quite some time, and so far our favoriate name is the great, undefeatable, and fierce: Mangosaurus!\n"
    ]
   },
   {
@@ -1013,10 +994,6 @@
     "The rest of this notebook is optional and is not graded, but we hope you'll do it anyway since it's quite fun and informative. \n",
     "\n",
     "A similar (but more complicated) task is to generate Shakespeare poems. Instead of learning from a dataset of Dinosaur names you can use a collection of Shakespearian poems. Using LSTM cells, you can learn longer term dependencies that span many characters in the text--e.g., where a character appearing somewhere a sequence can influence what should be a different character much much later in ths sequence. These long term dependencies were less important with dinosaur names, since the names were quite short. \n",
-    "\n",
-    "\n",
-    "<img src=\"images/shakespeare.jpg\" style=\"width:500;height:400px;\">\n",
-    "<caption><center> Let's become poets! </center></caption>\n",
     "\n",
     "We have implemented a Shakespeare poem generator with Keras. Run the following cell to load the required packages and models. This may take a few minutes. "
    ]
@@ -1170,7 +1147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
